New folder/style.css
:root{
    --colortheme:rgb(255, 34, 97);
    --colortheme2:rgb(0, 171, 187);
    --colortheme3:rgb(0, 165, 110);
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Poppins',sans-serif;

}
::-webkit-scrollbar-thumb {
    background-color: var(--colortheme);
    border-radius: 3px;
}
::-webkit-scrollbar-track {
    background: rgb(57, 57, 57);
}
::-webkit-scrollbar {
    width: 12px;
}
body,html{
    /* overflow-x: hidden; */
    scroll-behavior: smooth;

}
body{
    background-color: #0d0d0d;
    color: white;
}
.scroll-to-top{
    position:fixed;
    bottom: 0;
    right: 0;
    padding: 0.5rem;
    margin: 0 2rem 2rem 0;
    background-color: white;
    cursor: pointer;
    border: none;
    border-radius: 35%;
    font-size: 2rem;
}
.scroll-to-top:hover{
    background-color: var(--colortheme);
    
}
.scroll-to-top i{
    color: black;
}
.scroll-to-top:hover i{
    color: white;
}
.color-option{
    
    position: fixed;
    right: 3rem;
    top: 5rem;
}
.color-option li{
    cursor: pointer;
    border: none;
    border-radius: 50%;
}
.hidden{
display: none;
}
.colorpalet{
    position: fixed;
    right: 3rem;
    top: 2rem;
    font-size: 2rem;
    
}
.red{
    list-style: none;
    background-color:rgb(255, 34, 97) ;
    width: 2rem;
    height: 2rem;
    margin-bottom: 0.5rem;
}
.blue{
    list-style: none;
    background-color: rgb(0, 171, 187);
    width: 2rem;
    height: 2rem;
    margin-bottom: 0.5rem;

}
.green{
    list-style: none;
    background-color:rgb(0, 165, 110);
    width: 2rem;
    height: 2rem;
    margin-bottom: 0.5rem;

}
.landing-page{
    height: 100vh;
    background-image: url(3d-business-man-playing-dress-up-with-pet-dog.png);
    /* animation: animatedBackground 10s linear infinite alternate; */
    background-repeat: no-repeat;
    background-position: 90% 50%;
    background-size: 35rem;
}

.navbar{
    padding: 1rem 8rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.navbar h1{
    font-size: 3.5rem;
}
.colorword{
    color: var(--colortheme);
}
.nav-list{
    display: flex;
    list-style: none;
}
.nav-list a{
    color:white;
    margin: 0 1.5rem;
    text-decoration: none;
    font-size: 1.1rem;
    position: relative;
    

}
.nav-list a::after{
    content: '';
    width: 0;
    background: var(--colortheme);
    height: 0.2rem;
    position: absolute;
    left: 0;
    bottom: -0.4rem;
    transition: 0.5s;
    
}
.nav-list a:hover::after{
    width: 100%;
}

.hero{
    margin-top:10rem ;
    margin-left: 10rem;
    width: 50%;
    
}
.hero p{
    font-size: 2rem;
    margin-bottom: 2rem;
}
.hero h2{
    font-size: 4rem;
    text-transform: capitalize;
}


/* about section */

.aboutflex{
    display: flex;
    width: 80%;
    margin: 0 auto;
    
}
.about-image{
    background-color: rgb(33, 33, 33);
    padding: 1rem;
    /* width: 40%; */
    border: none;
    border-radius: 10px;
    margin-right: 5rem;

}
.about-image img{
    width: 30rem;
}
/* .about-info{
    width: 60%;
} */
.about-info h2{
    font-size: 4rem;
    margin-bottom: 1rem;
}
.about-info p{
    color: gray;
}
.about-skills{
    display: flex;
    margin-top: 2rem;
    
}
.about-skills li{
    list-style: none;
    margin-right: 3rem;
    color: gray;
    font-weight: bold;
    cursor: pointer;
    position: relative;
}
.about-skills li::after{
    content: '';
    width: 0;
    background: var(--colortheme);
    height: 0.2rem;
    position: absolute;
    left: 0;
    bottom: -0.4rem;
    transition: 0.5s;
}
.about-skills li:hover::after{
    width: 100%;
}
.tab-content li{
    list-style: none;

    
}
.tab-content{
    display: none;
}
.active-tab{
   display: block;
   margin: 2rem 0;
}
.marginsmall{
   margin: 0.5rem 0;
}
.marginmedium{
    margin: 1rem 0;
}




/* services */

.services-flex{
    display: flex;
    
    gap: 4rem;
}
.servicesection{
    width: 80%;
    margin: 8rem auto;
}
.servicesection h2{
    font-size: 4rem;
    margin-bottom: 3rem;
}
.serviceicon{
    transition: 0.3s;
    padding: 2rem;
    background-color: rgb(33, 33, 33);

}
.serviceicon i{
    font-size: 2rem;
    margin-bottom: 1.5rem;

}
.serviceicon:hover{
    background-color: var(--colortheme);
    transform: translateY(-1rem);
    border-radius:10px ;

}
.serviceicon h3{
    font-size: 2rem;
    text-transform: capitalize;
    margin-bottom: 1.5rem;
    
}
.serviceicon a{
    text-decoration: none;
    color: white;
}
.serviceicon p{
    overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  margin-bottom: 1.5rem;

}


/* work section */

.worksection{
    width: 80%;
    margin: 8rem auto;
}

.work-flex{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
    grid-gap: 40px;
    /* margin-top: 50px; */
    
}
.work-list{
    background-color: rgb(33, 33, 33);
    position: relative;
    height: 25rem;
    border: none;
    border-radius: 10px;
    
}

.layer{
    position: absolute;
    bottom: 0;
    
    background-color: var(--colortheme);
    
    height: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 4rem;
    overflow: hidden;
    justify-content: center;
    border: none;
    border-radius: 10px;
    transition: height 0.5s;


 

}
.work-list:hover .layer{
    height: 100%;
}
.layer h3{
    margin-bottom: 1.5rem;
    font-size: 2rem;
    text-align: center;
}
.layer p{
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    margin-bottom: 1.5rem;
}
.layer a{
    background-color: white;
    padding: 0.5rem;
    border:none ;
    border-radius: 50%;
    color: black;
    transition: 0.3s;
}
.layer a:hover{
    box-shadow: 0px 0px 10px white;
}
.worksection h2{
    font-size: 4rem;
    margin-bottom: 3rem;
}
.seemorelink{
    display: block;
    margin: 3rem auto;
    width: fit-content;
    
    text-decoration: none;
    color: white;
    border: 2px solid var(--colortheme);
    padding: 1rem 2rem;
    border-radius: 10px;
    /* font-weight: bold; */
    transition: 0.3s;
    
}
.seemorelink:hover{
    background-color: var(--colortheme);
   
    box-shadow: 0 0 18px var(--colortheme);
    
}

/* contact */
.contactmesection{
    display: flex;
    width: 80%;
    margin: 8rem auto;
    justify-content: space-between;
    
    
}
.contact-links{
    display: flex;
    flex-direction: column;
}
.contact-links button{
    width: 10rem;
    background-color: var(--colortheme);
    border: none;
    border-radius: 10px;
    color: white;
    padding: 1rem;
    margin-top: 2rem;
    cursor: pointer;
}
.contact-form{
    width: 60%;
}
.contact-form input, .contact-form button ,.contact-form textarea{
         display: block;
         width: 100%;
         background-color: rgb(33, 33, 33);
         border: none;
         margin-bottom: 1rem;
         /* height: 2rem; */
         padding: 1rem;
         color: white;
   border: 2px solid transparent;

}
.contact-form button{
    cursor: pointer;
    background-color: var(--colortheme);
    border-radius: 10px;

}
.contact-form input:hover,.contact-form textarea:hover{
    outline: none;
    border-radius: 10px;
   border: 2px solid var(--colortheme);
}
.fa-envelope ,.fa-phone{
    color: var(--colortheme);
}
.contactmesection h2{
    font-size: 4rem;
    margin-bottom: 3rem;
}
.direct-links{
    margin-bottom: 1.5rem;
    
}
.direct-links a{
   color: white;
   text-decoration: none;
   margin-left: 1rem;
   font-size: 1.3rem;
}
.direct-links i{
    font-size: 1.5rem;
}
.sociallinks-flex i{
    color: gray;
    font-size: 2rem;
    margin-right: 1rem;
    margin-bottom: 1.5rem;

}

/* footer */

.footer{
    background-color:rgb(33, 33, 33);
    padding: 2rem;
    text-align: center;
}

